Added Context Provider Extenstion and moved pod's files to the right location.

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,9 @@ target 'HMHClassKitHelper_Example' do
 
   target 'HMHClassKitHelper_Tests' do
     inherit! :search_paths
-
-    
+  end
+  
+  target 'HMHClassKitHelper_ExtensionExample' do
+    pod 'HMHClassKitHelper', :path => '../'
   end
 end
